# backtrack

./: Cargo.toml
src/: algo.rs  lib.rs  main.rs  sudoku.rs
src/grinder/: config_tank.rs  config_tank_builder.rs  grind.rs  mod.rs  swap_container.rs  variable.rs
